--- a/HW28_MAUI__PhoneBook/HW28.Maui.PhoneBook/Resources/Styles/Colors.xaml
+++ b/HW28_MAUI__PhoneBook/HW28.Maui.PhoneBook/Resources/Styles/Colors.xaml
@@ -2,7 +2,8 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MarkupExtensions">
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
@@ -42,4 +43,18 @@
     <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+
+
+    <local:HSLColor x:Key="BlueHi" H="205" S="100"/>
+    <local:HSLColor x:Key="BlueDefault" H="205" S="50"/>
+    <local:HSLColor x:Key="BlueLow" H="205" S="30" L="25, 75"/>
+
+    <local:HSLColor x:Key="GreenHi" H="123" S="100"/>
+    <local:HSLColor x:Key="GreenDefault" H="123" S="50"/>
+    <local:HSLColor x:Key="GreenLow" H="123" S="30" L="25, 75"/>
+
+    <local:HSLColor x:Key="RedHi" H="0" S="100"/>
+    <local:HSLColor x:Key="RedDefault" H="0" S="50"/>
+    <local:HSLColor x:Key="RedLow" H="0" S="30" L="25, 75"/>
+    
 </ResourceDictionary>
