--- a/HW28_MAUI__PhoneBook/PhoneBook/Views/ItemPage.xaml
+++ b/HW28_MAUI__PhoneBook/PhoneBook/Views/ItemPage.xaml
@@ -2,22 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhoneBook.Views.ItemPage"
-             Title="{Binding Name}"
+             Title="{Binding ., Converter={StaticResource ItemToTitleConverter}}"
+             xmlns:converters="clr-namespace:PhoneBook.Converters"
              xmlns:models="clr-namespace:PhoneBook.Models"
              x:DataType="models:Item">
     <ScrollView>
         <VerticalStackLayout Padding="20"
                              Spacing="10"
                              VerticalOptions="StartAndExpand">
-            <Label Text="Name" />
-            <Entry Text="{Binding Name}" />
-            <Label Text="Notes" />
-            <Entry Text="{Binding Notes}" />
-            <Label Text="Done" />
-            <Switch IsToggled="{Binding Done}" />
-            <Button Text="Save" Clicked="OnSaveClicked" />
-            <Button Text="Delete" Clicked="OnDeleteClicked" />
-            <Button Text="Cancel" Clicked="OnCancelClicked" />
+            <Label Text="Прізвище" />
+            <Entry Text="{Binding LastName}" />
+            
+            <Label Text="Ім'я" />
+            <Entry Text="{Binding FirstName}" />
+
+            <Label Text="Телефон" />
+            <Entry Text="{Binding Phone}" />
+
+            <Label Text="Опис" />
+            <Entry Text="{Binding Description}" />
+            
+            
+            <Button Text="Зберегти" Clicked="OnSaveClicked" />
+            <Button Text="Видалити" Clicked="OnDeleteClicked" />
+            <Button Text="Відміна" Clicked="OnCancelClicked" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
