HW28 `MAUI • PhoneBook` finished

--- a/HW28_MAUI__PhoneBook/PhoneBook/Resources/Styles/Converters.xaml
+++ b/HW28_MAUI__PhoneBook/PhoneBook/Resources/Styles/Converters.xaml
@@ -6,5 +6,6 @@
     xmlns:converters="clr-namespace:PhoneBook.Converters">
 
     <converters:ItemToTitleConverter x:Key="ItemToTitleConverter"/>
+    <converters:ItemViewModelToTitleConverter x:Key="ItemViewModelToTitleConverter"/>
 
 </ResourceDictionary>
