--- a/HW28_MAUI__PhoneBook/PhoneBook/Resources/Styles/Colors.xaml
+++ b/HW28_MAUI__PhoneBook/PhoneBook/Resources/Styles/Colors.xaml
@@ -3,7 +3,7 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:App.MarkupExtensions">
+    xmlns:ext="clr-namespace:AppExt">
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
@@ -44,22 +44,22 @@
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
 
-    <local:HSLColor x:Key="DefaultBase"  H="0" S="0" L="100, 0"/>
-    <local:HSLColor x:Key="DefaultFall1" H="0" S="0" L="75, 25"/>
-    <local:HSLColor x:Key="DefaultFall2" H="0" S="0" L="50, 50"/>
-    <local:HSLColor x:Key="DefaultFall3" H="0" S="0" L="25, 75"/>    
+    <ext:HSLColor x:Key="DefaultBase"  H="0" S="0" L="100, 0"/>
+    <ext:HSLColor x:Key="DefaultFall1" H="0" S="0" L="75, 25"/>
+    <ext:HSLColor x:Key="DefaultFall2" H="0" S="0" L="50, 50"/>
+    <ext:HSLColor x:Key="DefaultFall3" H="0" S="0" L="25, 75"/>
 
-    <local:HSLColor x:Key="BlueHi" H="205" S="100"/>
-    <local:HSLColor x:Key="BlueDefault" H="205" S="50"/>
-    <local:HSLColor x:Key="BlueLow" H="205" S="30" L="25, 75"/>
+    <ext:HSLColor x:Key="BlueHi" H="205" S="100"/>
+    <ext:HSLColor x:Key="BlueDefault" H="205" S="50"/>
+    <ext:HSLColor x:Key="BlueLow" H="205" S="30" L="25, 75"/>
 
-    <local:HSLColor x:Key="GreenHi" H="123" S="100"/>
-    <local:HSLColor x:Key="GreenDefault" H="123" S="50"/>
-    <local:HSLColor x:Key="GreenLow" H="123" S="30" L="25, 75"/>
+    <ext:HSLColor x:Key="GreenHi" H="123" S="100"/>
+    <ext:HSLColor x:Key="GreenDefault" H="123" S="50"/>
+    <ext:HSLColor x:Key="GreenLow" H="123" S="30" L="25, 75"/>
 
-    <local:HSLColor x:Key="RedHi" H="0" S="100"/>
-    <local:HSLColor x:Key="RedDefault" H="0" S="50"/>
-    <local:HSLColor x:Key="RedLow" H="0" S="30" L="25, 75"/>
+    <ext:HSLColor x:Key="RedHi" H="0" S="100"/>
+    <ext:HSLColor x:Key="RedDefault" H="0" S="50"/>
+    <ext:HSLColor x:Key="RedLow" H="0" S="30" L="25, 75"/>
 
     
 
