--- a/HW28_MAUI__PhoneBook/PhoneBook/Views/ItemsSetPage.xaml
+++ b/HW28_MAUI__PhoneBook/PhoneBook/Views/ItemsSetPage.xaml
@@ -4,6 +4,7 @@
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
              x:Class="PhoneBook.Views.ItemsSetPage"
              xmlns:models="clr-namespace:PhoneBook.Models"
+             xmlns:viewModels="clr-namespace:PhoneBook.ViewModels"
              ios:Page.UseSafeArea="True"
              Title="Контакти">
     <ContentPage.Resources>
@@ -28,11 +29,14 @@
         <CollectionView 
                   VerticalOptions="Fill"
                   ItemsSource="{Binding Items}"
-                  SelectionMode="Single"
-                  SelectionChanged="CollectionView_SelectionChanged">
+                  SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="models:Item">
                     <Grid>
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:ItemsSetViewModel}}, Path=ItemSelectedCommand}" CommandParameter="{Binding .}"/>
+                        </Grid.GestureRecognizers>
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
@@ -54,7 +58,7 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        <Button Grid.Row="1" Text="Новий контакт" Clicked="OnItemAdded"
+        <Button Grid.Row="1" Text="Новий контакт" Command="{Binding NewItemCommand}"
                 Margin="20"/>
     </Grid>
 </ContentPage>
